contact file added

--- a/assets/images/About me.htm
+++ b/assets/images/About me.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en-US">
-    <head>
-        <meta charset="UTF-8">
+<!-- saved from url=(0059)file:///Users/lia/Desktop/repo/Basic-Portfolio/contact.html -->
+<html lang="en-US"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        
         <title>About me</title>
     </head>
     <body>
@@ -9,9 +9,9 @@
             <nav class="navbar">
                 <div class="name">Swapna Lia Anil</div>
                 <ul class="list">
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="file:///Users/lia/Desktop/repo/Basic-Portfolio/contact.html#">About</a></li>
+                    <li><a href="file:///Users/lia/Desktop/repo/Basic-Portfolio/contact.html#">Portfolio</a></li>
+                    <li><a href="file:///Users/lia/Desktop/repo/Basic-Portfolio/contact.html#">Contact</a></li>
                 </ul>
             </nav>
             <div>
@@ -20,17 +20,17 @@
                     <hr>
                     <form>
                         Name 
-                        <input type="text" />
+                        <input type="text">
                         Email
-                        <input type="text" />
+                        <input type="text">
                         Message
                         <textarea style="height:20px"></textarea>
-                        <input type="submit"/>
+                        <input type="submit">
                     </form>
                 </section>
             </div>
             <hr>
             <footer>Copyright@</footer>
         </div>
-    </body>
-</html>
+    
+</body></html>
