--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
         <div class="container">
             <nav class="navbar">
                 <div class="name">
-                    SWAPNA LIA ANIL
+                    Swapna Lia Anil
                 </div>
                 <ul class="list">
                     <li><a href="#">About</a></li>
-                    <div class="vertical"></div>
                     <li><a href="#">Portfolio</a></li>
-                    <div class="vertical"></div>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
