index file added

--- a/index.html
+++ b/index.html
@@ -2,30 +2,33 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <title>About me</title>
+        <title>Personal Info</title>
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
-        <div class="container">
-            <nav class="navbar">
-                <div class="name">
-                    Swapna Lia Anil
-                </div>
-                <ul class="list">
+        <header class="head">
+            <div class="name">Swapna Lia Anil</div>
+            <div class="menu">
+                <ul>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
-            </nav>
-            <div>
-                <section class="info">
-                    <h1>About Me</h1>
-                    <hr style="height: 10px;background-color: aqua;border:aqua">
-                    <img src="assets/images/prof.jpeg" alt="My Image">
-                    <p>A blog is a discussion or informational website published on the World Wide Web consisting of discrete, often informal diary-style text entries. Posts are typically displayed in reverse chronological order, so that the most recent post appears first, at the top of the web page.</p>
-                </section>
             </div>
-            <hr>
-            <footer>Copyright@</footer>
+        </header>
+        <div class="contact-info">
+            <div class="info">
+                <h1>About Me</h1>
+                <div class="line-about"></div>
+                <img src="assets/images/profile4.jpg" alt="My pic">
+                <p class="para1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                <p class="para2">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                <p class="para3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+            </div>
         </div>
+        <footer>
+            <div class="line"></div>
+            <div id="copy">Copyright@</div>
+        </footer>
     </body>
 </html>
