--- a/portfolio.html
+++ b/portfolio.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>About me</title>
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
         <div class="container">
-            <nav class="navbar">
+            <header class="head">
                 <div class="name">
                     Swapna Lia Anil
                 </div>
@@ -15,30 +16,30 @@
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
-            </nav>
-            <div>
+            </header>
+            <div class="design">
                 <section class="info">
                     <h1>Portfolio</h1>
-                    <hr style="height: 10px;background-color: aqua;border:aqua">
+                    <hr>
                     <div class="main-gallery">
                         <div class="gallery">
-                            <a href="assets/images/hangman.jpeg" target="_target"><img src="assets/images/hangman.jpeg" alt="My Image"></a>
+                            <a href="assets/images/hangman.jpeg" target="_blank"><img src="assets/images/hangman.jpeg" alt="My Image"></a>
                             <div class="text">Hangman</div>
                         </div>
                         <div class="gallery">
-                            <a href="assets/images/rpg.jpeg" target="_target"><img src="assets/images/rpg.jpeg" alt="My Image"></a>
+                            <a href="assets/images/rpg.jpeg" target="_blank"><img src="assets/images/rpg.jpeg" alt="My Image"></a>
                             <div class="text">RPG Game</div>
                         </div>
                         <div class="gallery">
-                            <a href="assets/images/trivia.jpeg" target="_target"><img src="assets/images/trivia.jpeg" alt="My Image"></a>
+                            <a href="assets/images/trivia.jpeg" target="_blank"><img src="assets/images/trivia.jpeg" alt="My Image"></a>
                             <div class="text">Trivia Game</div>
                         </div>
                         <div class="gallery">
-                            <a href="assets/images/rutgers.jpeg" target="_target"><img src="assets/images/rutgers.jpeg" alt="My Image"></a>
+                            <a href="assets/images/rutgers.jpeg" target="_blank"><img src="assets/images/rutgers.jpeg" alt="My Image"></a>
                             <div class="text">Rutgers Info Widget</div>
                         </div>
                         <div class="gallery">
-                            <a href="assets/images/rock.jpeg" target="_target"><img src="assets/images/rock.jpeg" alt="My Image"></a>
+                            <a href="assets/images/rock.jpeg" target="_blank"><img src="assets/images/rock.jpeg" alt="My Image"></a>
                             <div class="text">Rock Paper Scissors</div>
                         </div>
                     </div>
