portfolio file added

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,51 +2,51 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <title>About me</title>
+        <title>Personal Info</title>
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
-        <div class="container">
-            <header class="head">
-                <div class="name">
-                    Swapna Lia Anil
-                </div>
-                <ul class="list">
+        <header class="head">
+            <div class="name">Swapna Lia Anil</div>
+            <div class="menu">
+                <ul>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
-            </header>
-            <div class="design">
-                <section class="info">
-                    <h1>Portfolio</h1>
-                    <hr>
-                    <div class="main-gallery">
-                        <div class="gallery">
-                            <a href="assets/images/hangman.jpeg" target="_blank"><img src="assets/images/hangman.jpeg" alt="My Image"></a>
-                            <div class="text">Hangman</div>
-                        </div>
-                        <div class="gallery">
-                            <a href="assets/images/rpg.jpeg" target="_blank"><img src="assets/images/rpg.jpeg" alt="My Image"></a>
-                            <div class="text">RPG Game</div>
-                        </div>
-                        <div class="gallery">
-                            <a href="assets/images/trivia.jpeg" target="_blank"><img src="assets/images/trivia.jpeg" alt="My Image"></a>
-                            <div class="text">Trivia Game</div>
-                        </div>
-                        <div class="gallery">
-                            <a href="assets/images/rutgers.jpeg" target="_blank"><img src="assets/images/rutgers.jpeg" alt="My Image"></a>
-                            <div class="text">Rutgers Info Widget</div>
-                        </div>
-                        <div class="gallery">
-                            <a href="assets/images/rock.jpeg" target="_blank"><img src="assets/images/rock.jpeg" alt="My Image"></a>
-                            <div class="text">Rock Paper Scissors</div>
-                        </div>
-                    </div>
-                </section>
             </div>
-            <hr>
-            <footer>Copyright@</footer>
+        </header>
+        <div class="contact-info">
+            <div class="info">
+                <h1>Portfolio</h1>
+                <div class="line-about"></div>
+                <div class="container">
+                <div class="contain-image-text">
+                    <img class="port-image" src="assets/images/hangman.jpeg" alt="My pic">
+                    <div class="image-text">Hangman</div>
+                </div>
+                <div class="contain-image-text">
+                    <img class="port-image" src="assets/images/rpg.jpeg" alt="My pic">
+                    <div class="image-text">RPG Game</div>
+                </div> 
+                <div class="contain-image-text">
+                    <img class="port-image" src="assets/images/trivia.jpeg" alt="My pic">
+                    <div class="image-text">Trivia Game</div>
+                </div>
+                <div class="contain-image-text">
+                    <img class="port-image" src="assets/images/rutgers.jpeg" alt="My pic">
+                    <div class="image-text">Rutgers Info Widget</div>
+                </div>
+                <div class="contain-image-text">
+                    <img class="port-image" src="assets/images/rock.jpeg" alt="My pic">
+                    <div class="image-text">Rock Paper Scissors</div>
+                </div> 
+                </div>
+            </div>
         </div>
+        <footer>
+            <div class="line"></div>
+            <div id="copy">Copyright@</div>
+        </footer>
     </body>
 </html>
