--- a/contact.html
+++ b/contact.html
@@ -2,35 +2,46 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <title>About me</title>
+        <title>Personal Info</title>
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
-        <div class="container">
-            <nav class="navbar">
-                <div class="name">Swapna Lia Anil</div>
-                <ul class="list">
+        <header class="head">
+            <div class="name">Swapna Lia Anil</div>
+            <div class="menu">
+                <ul>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
-            </nav>
-            <div>
-                <section class="info">
-                    <h1>About Me</h1>
-                    <hr>
-                    <form>
-                        Name 
-                        <input type="text" />
-                        Email
-                        <input type="text" />
-                        Message
-                        <textarea style="height:20px"></textarea>
-                        <input type="submit"/>
-                    </form>
-                </section>
             </div>
-            <hr>
-            <footer>Copyright@</footer>
+        </header>
+        <div class="contact-info">
+            <div class="info">
+                <h1>Contact</h1>
+                <div class="line-about"></div>
+                <div class="form">
+                    <div>
+                        <label>Name</label>
+                        <br>
+                        <textarea placeholder=" John Mathew"></textarea>
+                        <br>
+                        <label>Email</label>
+                        <br>
+                        <textarea placeholder=" example@gmail.com"></textarea>
+                        <br>
+                        <label>Message</label>
+                        <br>
+                        <textarea rows="10" cols="100"></textarea>
+                        <br>
+                        <button>Submit</button>
+                    </div>
+                </div>
+            </div>
         </div>
+        <footer>
+            <div class="line"></div>
+            <div id="copy">Copyright@</div>
+        </footer>
     </body>
 </html>
