--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@
             <div class="name">Swapna Lia Anil</div>
             <div class="menu">
                 <ul>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </div>
