--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             <div class="menu">
                 <ul>
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </header>
