--- a/portfolio.html
+++ b/portfolio.html
@@ -10,9 +10,9 @@
             <div class="name">Swapna Lia Anil</div>
             <div class="menu">
                 <ul>
-                    <li><a href="#">About</a></li>
+                    <li><a href="index.html">About</a></li>
                     <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </header>
