--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,9 @@
             <div class="menu">
                 <ul>
                     <li><a href="index.html">About</a></li>
+                    <span>|</span>
                     <li><a href="portfolio.html">Portfolio</a></li>
+                    <span>|</span>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </div>
@@ -24,7 +26,7 @@
                     <div>
                         <label>Name</label>
                         <br>
-                        <textarea placeholder=" John Mathew"></textarea>
+                        <textarea placeholder=" John Doe"></textarea>
                         <br>
                         <label>Email</label>
                         <br>
