--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Personal Info</title>
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
@@ -11,7 +12,9 @@
             <div class="menu">
                 <ul>
                     <li><a href="#">About</a></li>
+                    <span>|</span>
                     <li><a href="portfolio.html">Portfolio</a></li>
+                    <span>|</span>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
@@ -21,9 +24,9 @@
                 <h1>About Me</h1>
                 <div class="line-about"></div>
                 <img src="assets/images/profile4.jpg" alt="My pic">
-                <p class="para1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                <p class="para2">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
-                <p class="para3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                <p class="para1">My name is Swapna, but my friends call me Lia. I graduated in Computer Sceince from India and I now strive to learn new technologies which brings me here to this wonderful place. As a mother, this is going to be a challenging experience for me, but all the more to show my grit.I love a range of music (no heavy metal please!) Rihanna is one of my favorite singers and I am inspired by her music. I hope to sing like her some day!</p>
+                <p class="para2">My daughter is my best friend and being with her is my hobby. We pretty much spend all of our time together so her first day at school is going to be heartbreaking -- for me!</p>
+                <p class="para3">I used to do a bit of sketching, which is also one reason why I want to try out web development. I might be able to design some beutiful webpages in the coming months! I have so much to learn, and I am all in for it. Let’s do this as a team!</p>
             </div>
         </div>
         <footer>
