--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,9 @@
             <div class="menu">
                 <ul>
                     <li><a href="index.html">About</a></li>
+                    <span>|</span>
                     <li><a href="#">Portfolio</a></li>
+                    <span>|</span>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
