--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <img src="assets/images/profile4.jpeg" alt="My pic">
                 <p class="para1">My name is Swapna, but my friends call me Lia. I graduated in Computer Sceince from India and I now strive to learn new technologies which brings me here to this wonderful place. As a mother, this is going to be a challenging experience for me, but all the more to show my grit.I love a range of music (no heavy metal please!) Rihanna is one of my favorite singers and I am inspired by her music. I hope to sing like her some day!</p>
                 <p class="para2">My daughter is my best friend and being with her is my hobby. We pretty much spend all of our time together so her first day at school is going to be heartbreaking -- for me!</p>
-                <p class="para3">I used to do a bit of sketching, which is also one reason why I want to try out web development. I might be able to design some beutiful webpages in the coming months! I have so much to learn, and I am all in for it. Let’s do this as a team!</p>
+                <p class="para3">I used to do a bit of sketching, which is also one reason why I want to try out web development. I might be able to design some beautiful webpages in the coming months! I have so much to learn, and I am all in for it. Let’s do this as a team!</p>
             </div>
         </div>
         <footer>
